--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "description": "",
   "main": "dist/index.js",
+  "bin": "cli.js",
   "scripts": {
     "test": "ava -v"
   },
@@ -23,7 +24,8 @@
     "babel-runtime": "^6.11.6",
     "bluebird": "^3.4.6",
     "debug": "^2.3.3",
-    "fs-extra": "^1.0.0"
+    "fs-extra": "^1.0.0",
+    "meow": "^3.7.0"
   },
   "ava": {
     "files": [
