--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "babel-preset-stage-3": "^6.11.0",
     "babel-runtime": "^6.11.6",
     "bluebird": "^3.4.6",
+    "cli-spinner": "^0.2.5",
     "debug": "^2.3.3",
     "fs-extra": "^1.0.0",
     "meow": "^3.7.0"
