--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "cli-spinner": "^0.2.5",
     "debug": "^2.3.3",
     "fs-extra": "^1.0.0",
-    "meow": "^3.7.0"
+    "meow": "^3.7.0",
+    "upath": "^0.2.0"
   },
   "ava": {
     "files": [
