--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "debug": "^2.3.3",
     "fs-extra": "^1.0.0",
     "meow": "^3.7.0",
+    "slash": "^1.0.0",
     "upath": "^0.2.0"
   },
   "ava": {
