--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
     "babel-preset-stage-3": "^6.11.0",
     "babel-runtime": "^6.11.6",
     "bluebird": "^3.4.6",
+    "chalk": "^1.1.3",
     "cli-spinner": "^0.2.5",
     "debug": "^2.3.3",
     "fs-extra": "^1.0.0",
     "meow": "^3.7.0",
+    "ora": "^0.3.0",
     "slash": "^1.0.0",
     "upath": "^0.2.0"
   },
