--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "dist/index.js",
   "bin": "cli.js",
   "scripts": {
+    "build": "babel lib --out-dir dist",
     "test": "ava -v"
   },
   "author": "Dima Paloskin <dima@paloskin.me>",
