--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "bin": "cli.js",
   "scripts": {
     "build": "babel lib --out-dir dist",
-    "test": "ava -v"
+    "test": "xo && ava -v"
   },
   "author": "Dima Paloskin <dima@paloskin.me>",
   "license": "MIT",
