update .travis.yml. add babel-cli installation

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,12 @@ language: node_js
 node_js:
   - 7
   - 6
+cache:
+  directories:
+    - $HOME/.npm
+    - node_modules
+before_install:
+  npm i -g babel-cli
 
 before_script:
   npm run build
